automatically backed up by learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+
+      <form method="post" action="/">
+        <p>Input the text you want pig latinized here:</p>
+        <textarea name="user_text"></textarea>
+        <br>
+        <button type="submit" value="submit">Submit</button>
+      </form>
   </body>
 </html>
