--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Pig Latinizer</h1>
 
-      <form method="post" action="/">
+      <form method="post" action="/piglatinize">
         <p>Input the text you want pig latinized here:</p>
         <textarea name="user_text"></textarea>
         <br>
