automatically backed up by learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,7 +8,7 @@
     <h1>Pig Latinizer</h1>
 
       <form method="post" action="/piglatinize">
-        <p>Input the text you want pig latinized here:</p>
+        <p>Enter your phrase:</p>
         <textarea name="user_text"></textarea>
         <br>
         <button type="submit" value="submit">Submit</button>
