automatically backed up by learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -9,7 +9,7 @@
 
       <form method="post" action="/piglatinize">
         <p>Enter your phrase:</p>
-        <textarea name="user_text"></textarea>
+        <textarea name="user_phrase"></textarea>
         <br>
         <button type="submit" value="submit">Submit</button>
       </form>
